<resources>
    <string name="app_name">SPIT</string>
    <string name="college_full_name">Sardar Patel Institute \nof Technology</string>
    <string name="version">Version 1.4.1</string>
    <string name="versionnumber">1.4.1</string>
    <string name="copyright_college">2018 Sardar Patel Institute of Technology</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="developer">Pranjal Chaudhari</string>
    <string name="dev_location">Andheri,Mumbai</string>
    <string name="dev_email">pranjalpchaudhari99@gmail.com</string>
    <string name="changelog">Changelog</string>
    <string name="updatelog">Update log</string>
    <string name="update_details_1">Updated TimeTable for all years and branches</string>
    <string name="update_details_2">General bug fixes and improvements</string>
    <string name="update_details_3">Added support for Android Lollipop and Marshmallow</string>
    <string name="update_details_4">Added notification support</string>
    <string name="update_details_5">Added Logout feature</string>
    <string name="update_details_6">Added offline support</string>

    <string-array name="Class_String">
        <item>Select Year</item>
        <item>FE</item>
        <item>SE</item>
        <item>TE</item>
        <item>BE</item>
    </string-array>
    <string-array name="Branch_String">
        <item>Select Branch</item>
        <item>COMP</item>
        <item>IT</item>
        <item>EXTC</item>
        <item>ETRX</item>
    </string-array>

    <string-array name="FE_SEM">
        <item>SEM I</item>
        <item>SEM II</item>
    </string-array>

    <string-array name="SE_SEM">
        <item>SEM III</item>
        <item>SEM IV</item>
    </string-array>

    <string-array name="TE_SEM">
        <item>SEM V</item>
        <item>SEM VI</item>
    </string-array>

    <string-array name="BE_SEM">
        <item>SEM VII</item>
        <item>SEM VIII</item>
    </string-array>

    <string name="collegename">Bhartiya Vidya Bhavan\'\s Sardar Patel Institute of Technology</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_app_main">app_main</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="aboutus1">The institute is located in 47 acres of green campus at Andheri (W),
        the fastest growing suburb of Mumbai. The campus also houses four Bhavan’s Institutions of great
        repute namely Bhavan’s College (the arts, commerce and science college), Sardar Patel College of
        Engineering – Government aided Engineering college, S.P. Jain Institute of Management and Research,
        a management institute and A.H. Wadia, higher secondary school.</string>
    <string name="aboutus2">In 1957, the Bharatiya Vidya Bhavan conceived the idea of establishing an
        engineering college in Mumbai. Sardar Patel College of Engineering was inaugurated on 19th August
        1962.</string>

    <string name="aboutus3">In 1995 self-financed engineering courses were added to it and it functioned
        as Sardar Patel College of Engineering (Unaided-wing) conducting Electronics Engineering, Computer
        Engineering and Information Technology Courses and Masters course in Electronics since 2005 till
        2008. These courses have earned a great reputation in the field of engineering education, as well
        as industry. Bharatiya Vidya Bhavan’s Sardar Patel College of Engineering, Unaided Wing was
        established in its new building under the name and style of Bharatiya Vidya Bhavan’s Sardar Patel
        Institute of Technology since 2005 and is affiliated to Mumbai University.</string>

    <string-array name="SEM_3_EXTC">
        <item>Applied Mathematics I</item>
        <item>Electronics Devices and Circuits</item>
        <item>Circuit Theory</item>
        <item>Digital Circuits</item>
        <item>Electromagnetic Wave Propagation</item>
        <item>Electronics Devices and Circuits Lab</item>
        <item>Digital Circuits Lab </item>
        <item>HDL Programming Lab</item>
        <item>Object Oriented Programming Lab</item>
        <item>Human Health Systems Approach</item>
    </string-array>

    <integer-array name="SEM_3__EXTC_CREDITS">
        <item>4</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>2</item>
    </integer-array>

    <integer-array name="SEM_3_EXTC_ISE">
        <item>20</item>
        <item>20</item>
        <item>20</item>
        <item>20</item>
        <item>20</item>
        <item>40</item>
        <item>40</item>
        <item>40</item>
        <item>40</item>
        <item>20</item>

    </integer-array>

    <integer-array name="SEM_3_EXTC_MSE">
        <item>20</item>
        <item>20</item>
        <item>20</item>
        <item>20</item>
        <item>20</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>20</item>

    </integer-array>

    <integer-array name="SEM_3_EXTC_ESE">
        <item>60</item>
        <item>60</item>
        <item>60</item>
        <item>60</item>
        <item>60</item>
        <item>0</item>
        <item>0</item>
        <item>20</item>
        <item>20</item>
        <item>10</item>

    </integer-array>

    <integer-array name="SEM_3__EXTC_OUTOF">
        <item>100</item>
        <item>100</item>
        <item>100</item>
        <item>100</item>
        <item>100</item>
        <item>40</item>
        <item>40</item>
        <item>60</item>
        <item>60</item>
        <item>50</item>
    </integer-array>

    <integer name="SEM_3_EXTC_TOTAL">750</integer>

</resources>
