<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite"
    android:id="@+id/drawerLayout">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_above="@id/spit_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/college_full_name"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/spit_logo"
        android:layout_centerInParent="true"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/spit_logo"/>

    <TextView
        android:id="@+id/version"
        android:layout_below="@id/spit_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/version"/>

    <LinearLayout
        android:id="@+id/copyright_college"
        android:orientation="horizontal"
        android:layout_below="@id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/copyright_college_img"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_copyright_black_24"
            android:layout_gravity="center"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/copyright_college"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_below="@id/copyright_college"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/all_rights_reserved"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        android:textColor="@color/blue700"
        android:text="@string/changelog"
        android:clickable="true"
        android:onClick="changelog"/>



</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>