<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangelogActivity"
    android:background="@color/colorWhite">

    <FrameLayout
        android:id="@+id/toolbarchangelog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/changelogback"
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:src="@drawable/round_arrow_back_ios_black_24"
                android:scaleType="centerInside"
                android:onClick="changelogback"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updatelog"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/toolbarchangelog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/update_details_1"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/update_details_2"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/update_details_3"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/update_details_4"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/update_details_5"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/update_details_6"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>